--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1010,6 +1010,7 @@ svg.ripple {
     }
 
     .forecast {
+        margin-bottom: 10px;
         position: relative;
         text-align: center;
 
